# Covid19_EERAModel

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Covid19EERAModel  Dockerfile  Doxyfile  IniFile.cpp  IniFile.h  LICENSE  README.md  SoftwareChecklist.md  index.html  main_version_0.2.2.cpp  main_version_0.2.3.cpp  main_version_0.3.0.cpp  main_version_0.3.1.cpp  main_version_0.3.2.cpp  parameters.ini
.github/workflows/: eera.yml
DATA/: scot_data.csv  scot_deaths.csv
cmake/: FindDataPipeline.cmake  git_watcher.cmake
cmake_modules/: CodeCoverage.cmake
data/: cfr_byage.csv  parameters 2.ini  parameters.ini  parameters_.ini  posterior_parameters.csv  scot_age.csv  scot_data.csv  scot_data_2020-04-06.csv  scot_frail.csv
data/example/: parameters.ini
data/upload_scripts/: params_gen.R  process_cfrbyage.R  process_disease_data.R  process_posterior_params.R
doc/: .Rhistory  EPIC COVID19 SIMPLE MODEL PARAMETERS AND DATASET USED.docx  eeraModel_data_preprocessing.r  eeraModel_data_preprocessing_functions.R  eera_model_overview.Rmd  eera_model_overview.html
doxygen/html/: ArgumentParser_8h_source.html  Dependencies_8h_source.html  Git_8h_source.html  IO_8h_source.html  InferenceFramework_8h_source.html  InferenceParameters_8h_source.html  IniFile_8h_source.html  IrishModel_8h_source.html  ModelCommon_8h_source.html  ModelTypes_8h_source.html  Observations_8h_source.html  OriginalModel_8h_source.html  PredictionFramework_8h_source.html  Random_8h_source.html  TempModel_8h_source.html  Timer_8h_source.html  Utilities_8h_source.html  _formulas.tex  annotated.html  classCIniFile-members.html  classCIniFile.html  classEERAModel_1_1ArgumentParser-members.html  classEERAModel_1_1ArgumentParser.html  classEERAModel_1_1DependencyVersions-members.html  classEERAModel_1_1DependencyVersions.html  classEERAModel_1_1IO_1_1IOException-members.html  classEERAModel_1_1IO_1_1IOException.html  classEERAModel_1_1IO_1_1IOException__coll__graph.map  classEERAModel_1_1IO_1_1IOException__inherit__graph.md5  classEERAModel_1_1Inference_1_1InferenceFramework-members.html  classEERAModel_1_1Inference_1_1InferenceFramework.html  classEERAModel_1_1Inference_1_1InferenceParameterGenerator-members.html  classEERAModel_1_1Inference_1_1InferenceParameterGenerator.html  classEERAModel_1_1Inference_1_1InferenceParticleGenerator-members.html  classEERAModel_1_1Inference_1_1InferenceParticleGenerator.html  classEERAModel_1_1Model_1_1IrishModel-members.html  classEERAModel_1_1Model_1_1IrishModel.html  classEERAModel_1_1Model_1_1IrishModel__coll__graph.map  classEERAModel_1_1Model_1_1IrishModel__coll__graph.md5  classEERAModel_1_1Model_1_1ModelInterface-members.html  (+171 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+49 more)
doxygen/latex/: annotated.tex  classCIniFile.tex  classEERAModel_1_1ArgumentParser.tex  classEERAModel_1_1DependencyVersions.tex  classEERAModel_1_1IO_1_1IOException.tex  classEERAModel_1_1IO_1_1IOException__coll__graph.md5  classEERAModel_1_1Inference_1_1InferenceFramework.tex  classEERAModel_1_1Inference_1_1InferenceParameterGenerator.tex  classEERAModel_1_1Inference_1_1InferenceParticleGenerator.tex  classEERAModel_1_1Model_1_1IrishModel.tex  classEERAModel_1_1Model_1_1IrishModel__coll__graph.md5  classEERAModel_1_1Model_1_1ModelInterface.tex  classEERAModel_1_1Model_1_1ModelInterface__inherit__graph.md5  classEERAModel_1_1Model_1_1ModelParameters.tex  classEERAModel_1_1Model_1_1OriginalModel.tex  classEERAModel_1_1Model_1_1OriginalModel__inherit__graph.md5  classEERAModel_1_1Model_1_1TempModel.tex  classEERAModel_1_1Model_1_1TempModel__coll__graph.md5  classEERAModel_1_1Prediction_1_1PredictionFramework.tex  classEERAModel_1_1Random_1_1RNG.tex  classEERAModel_1_1Random_1_1RNGInterface.tex  classEERAModel_1_1Random_1_1RNGInterface__inherit__graph.md5  classEERAModel_1_1Random_1_1RNG__inherit__graph.md5  classEERAModel_1_1SimpleTimer.tex  classEERAModel_1_1Utilities_1_1logging__stream.tex  classFramework.tex  classGitMetadata.tex  hierarchy.tex  namespaceEERAModel.tex  namespaceEERAModel_1_1IO.tex  namespaceEERAModel_1_1Inference.tex  namespaceEERAModel_1_1Model.tex  namespaceEERAModel_1_1Observations.tex  namespaceEERAModel_1_1Random.tex  namespaceEERAModel_1_1Utilities.tex  namespaces.tex  refman.tex  structCIniFile_1_1Record.tex  structEERAModel_1_1AgeGroupData.tex  structEERAModel_1_1Arguments.tex  (+22 more)
preprocessing-scripts/: .Rhistory  eeraModel_data_preprocessing.r  eeraModel_data_preprocessing_functions.R
scripts/: CheckDPRunOutputs.sh  CheckRunOutputs.sh  RunModel.sh  RunRegressionTests.sh  RunUnitTests.sh  SetUpDPModelRun.sh  SetUpModelRun.sh  UpdateRegressionTests.sh  clang_to_html.py  dpcheck.py  site_generation.py
site/: clang_tidy.html  code-coverage.html  cppcheck.html  doxygen-docs.html  model_documentation.html  simcpp.html
site/cppcheck/: 0.html  1.html  10.html  11.html  12.html  13.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  index.html  stats.html
src/: ArgumentParser.cpp  ArgumentParser.h  CMDParse.cpp  CMDParse.h  CMakeLists.txt  CSV.cpp  CSV.h  DataSourcing.cpp  DataSourcing.h  Dependencies.cpp.in  Dependencies.h  DistanceComputation.cpp  DistanceComputation.h  FittingProcess.cpp  FittingProcess.h  Git.cpp.in  Git.h  IO-datapipeline.cpp  IO-datapipeline.h  IO.cpp  IO.h  InferenceFramework.cpp  InferenceFramework.h  InferenceParameters.cpp  InferenceParameters.h  IniFile.cpp  IniFile.h  IrishModel.cpp  IrishModel.h  LocalFileStructure.h  Model.cpp  Model.h  ModelCommon.cpp  ModelCommon.h  ModelTypes.h  Observations.cpp  Observations.h  OriginalModel.cpp  OriginalModel.h  PredictionFramework.cpp  (+12 more)
test/: CMakeLists.txt
test/datapipeline/: config.yaml  parameters.ini
test/unit/: ArgParserTest.cpp  CMakeLists.txt  DataPipelineTest.cpp  ExampleTest.cpp  IOTest.cpp  ModelTest.cpp  ObservationTest.cpp  UtilitiesTest.cpp
(+223 files in other folders)
